# ticTacToe

./: .gitignore  ticTacToe.cabal
src/: Field.hs  Main.hs
