name:                ticTacToe
version:             0.0.9.0
-- synopsis:
-- description:
homepage:            https://github.com/fimmind/ticTacToe#readme
author:              Fimmind
maintainer:          grayfox19@mail.ru
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ticTacToe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
    base >= 4.7 && < 5,
    process
  other-modules:
    Field

